# f5-tts-pt-br

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MODEL_CARD.md  Makefile  README.md  pyproject.toml  run_pipeline.ps1
.github/workflows/: ci.yml
configs/: finetune_ptbr.yaml
docs/: architecture.md
scripts/: download_dataset.py  generate_avatar.py  inference.py  prepare_dataset.py  train.py  upload_to_hf.py
tests/: test_pipeline.py
